--- a/zft-adapter/src/main/resources/templates/manage/manageStaff.html
+++ b/zft-adapter/src/main/resources/templates/manage/manageStaff.html
@@ -26,7 +26,7 @@
             <div class="info-left">
                 <div class="title">
                     <div class="form-group float-left" style="width: 150px;">
-                        <input type="text" class="form-control" v-on:input="getStaffList($event.target.value)" placeholder="查询员工">
+                        <input type="text" class="form-control" v-on:input="getStaffList($event.target.value,true)" placeholder="查询员工">
                     </div>
                     <div class="add" v-on:click="addStaff">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill svg-text" viewBox="0 0 16 16">
@@ -88,13 +88,61 @@
                         <select class="form-control" v-model="staffInfoResponse.employeeDTO.employeeNation">
                             <option value="" style="display: none">请选择民族</option>
                             <option value="汉族">汉族</option>
-                            <option value="壮族">壮族</option>
-                            <option value="苗族">苗族</option>
+                            <option value="蒙古族">蒙古族</option>
                             <option value="回族">回族</option>
                             <option value="藏族">藏族</option>
-                            <option value="白族">白族</option>
+                            <option value="维吾尔族">维吾尔族</option>
+                            <option value="苗族">苗族</option>
+                            <option value="彝族">彝族</option>
+                            <option value="壮族">壮族</option>
+                            <option value="布依族">布依族</option>
                             <option value="朝鲜族">朝鲜族</option>
+                            <option value="满族">满族</option>
+                            <option value="侗族">侗族</option>
+                            <option value="瑶族">瑶族</option>
+                            <option value="白族">白族</option>
+                            <option value="土家族">土家族</option>
+                            <option value="哈尼族">哈尼族</option>
+                            <option value="哈萨克族">哈萨克族</option>
+                            <option value="傣族">傣族</option>
+                            <option value="黎族">黎族</option>
+                            <option value="傈僳族">傈僳族</option>
+                            <option value="佤族">佤族</option>
+                            <option value="畲族">畲族</option>
                             <option value="高山族">高山族</option>
+                            <option value="拉祜族">拉祜族</option>
+                            <option value="水族">水族</option>
+                            <option value="东乡族">东乡族</option>
+                            <option value="纳西族">纳西族</option>
+                            <option value="景颇族">景颇族</option>
+                            <option value="柯尔克孜族">柯尔克孜族</option>
+                            <option value="土族">土族</option>
+                            <option value="达斡尔族">达斡尔族</option>
+                            <option value="仫佬族">仫佬族</option>
+                            <option value="羌族">羌族</option>
+                            <option value="布朗族">布朗族</option>
+                            <option value="撒拉族">撒拉族</option>
+                            <option value="毛南族">毛南族</option>
+                            <option value="仡佬族">仡佬族</option>
+                            <option value="锡伯族">锡伯族</option>
+                            <option value="阿昌族">阿昌族</option>
+                            <option value="普米族">普米族</option>
+                            <option value="塔吉克族">塔吉克族</option>
+                            <option value="怒族">怒族</option>
+                            <option value="乌孜别克族">乌孜别克族</option>
+                            <option value="俄罗斯族">俄罗斯族</option>
+                            <option value="鄂温克族">鄂温克族</option>
+                            <option value="德昂族">德昂族</option>
+                            <option value="保安族">保安族</option>
+                            <option value="裕固族">裕固族</option>
+                            <option value="京族">京族</option>
+                            <option value="塔塔尔族">塔塔尔族</option>
+                            <option value="独龙族">独龙族</option>
+                            <option value="鄂伦春族">鄂伦春族</option>
+                            <option value="赫哲族">赫哲族</option>
+                            <option value="门巴族">门巴族</option>
+                            <option value="珞巴族">珞巴族</option>
+                            <option value="基诺族">基诺族</option>
                         </select>
                     </div>
                     <div class="text">
@@ -108,11 +156,11 @@
                     </div>
                     <div class="form-group" style="float: left;width: 200px;margin-right: 50px;margin-top: 8px;">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" v-model="staffInfoResponse.employeeDTO.employeeMedicalNursingSkills" v-if="staffInfoResponse.employeeDTO.employeeMedicalNursingSkills === 1 ? 'checked' : ''" name="inlineRadioOptions" id="inlineRadio1" value="1">
+                            <input class="form-check-input" type="radio" v-model="staffInfoResponse.employeeDTO.employeeMedicalNursingSkills" name="inlineRadioOptions" id="inlineRadio1" :value=1>
                             <label class="form-check-label" for="inlineRadio1">是</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" v-model="staffInfoResponse.employeeDTO.employeeMedicalNursingSkills" v-if="staffInfoResponse.employeeDTO.employeeMedicalNursingSkills === 0 ? 'checked' : ''" name="inlineRadioOptions" id="inlineRadio2" value="0">
+                            <input class="form-check-input" type="radio" v-model="staffInfoResponse.employeeDTO.employeeMedicalNursingSkills" name="inlineRadioOptions" id="inlineRadio2" :value=0>
                             <label class="form-check-label" for="inlineRadio2">否</label>
                         </div>
                     </div>
@@ -148,7 +196,7 @@
                     <div class="form-group" style="float: left;width: 200px;margin-right: 50px;">
                         <select class="form-control" v-model="staffInfoResponse.accountDTO.accountRole">
                             <option value="" selected style="display: none">请选择权限</option>
-                            <option value="1">老板</option>
+                            <option value="1">管理员</option>
                             <option value="2">医生</option>
                             <option value="3">药师</option>
                             <option value="4">库管员</option>
@@ -213,11 +261,8 @@
                     </div>
                     <div class="form-group" style="float: left;width: 200px;margin-right: 50px;">
                         <select class="form-control" v-model="staffInfoResponse.practiceDTO.practiceDepartmentId">
-                            <option value="" selected style="display: none">请选择科室</option>
-                            <option value="0">消化内科</option>
-                            <option value="1">骨科</option>
-                            <option value="2">肿瘤科</option>
-                            <option value="3">神经内科</option>
+                            <option value="" selected>无科室</option>
+                            <option v-for="department in departmentList" :value="department.departmentId">{{department.departmentName}}</option>
                         </select>
                     </div>
                     <div class="text">
@@ -230,23 +275,23 @@
                         职务
                     </div>
                     <div class="form-group" style="float: left;width: 200px;">
-                        <select class="form-control" v-model="staffInfoResponse.practiceDTO.practiceTitle">
-                            <option value="" selected style="display: none">请选择职称</option>
-                            <option value="医士">医士</option>
-                            <option value="医师">医师</option>
-                            <option value="主治医师">主治医师</option>
-                            <option value="副主任医师">副主任医师</option>
-                            <option value="主任医师">主任医师</option>
-                            <option value="药士">药士</option>
-                            <option value="药师">药师</option>
-                            <option value="副主任药师">副主任药师</option>
-                            <option value="主任药师">主任药师</option>
-                            <option value="护士">护士</option>
-                            <option value="护师">护师</option>
-                            <option value="主管护师">主管护师</option>
-                            <option value="副主任护师">副主任护师</option>
-                            <option value="主任护师">主任护师</option>
-                        </select>
+                            <select class="form-control" v-model="staffInfoResponse.practiceDTO.practiceTitle">
+                                <option value="" selected style="display: none">请选择职称</option>
+                                <option value="医士">医士</option>
+                                <option value="医师">医师</option>
+                                <option value="主治医师">主治医师</option>
+                                <option value="副主任医师">副主任医师</option>
+                                <option value="主任医师">主任医师</option>
+                                <option value="药士">药士</option>
+                                <option value="药师">药师</option>
+                                <option value="副主任药师">副主任药师</option>
+                                <option value="主任药师">主任药师</option>
+                                <option value="护士">护士</option>
+                                <option value="护师">护师</option>
+                                <option value="主管护师">主管护师</option>
+                                <option value="副主任护师">副主任护师</option>
+                                <option value="主任护师">主任护师</option>
+                            </select>
                     </div>
                 </div>
                 <div class="input">
@@ -344,10 +389,21 @@
                 employeeName: '',
                 employeeSex: '',
             }],
+            departmentList:[{
+                departmentId: null,
+                departmentCode: '',
+                departmentName: '',
+                departmentPinYin: '',
+                departmentBedNum: '',
+                departmentHeader: '',
+                departmentTel: '',
+                departmentIntroduce: '',
+                departmentTenantId: null,
+            }],
         },
         methods: {
             // 获取员工列表
-            getStaffList(name){
+            getStaffList(name,status){
                 let that = this;
                 $.ajax({
                     url: '/manage/getStaffList?name='+name,
@@ -358,7 +414,7 @@
                         response.forEach((item) => {
                             that.staffList.push(item);
                         });
-                        if(that.staffList.length > 0){
+                        if(that.staffList.length > 0 && status){
                             that.detail(that.staffList[0].employeeId);
                         }
                     },
@@ -397,7 +453,7 @@
                         practiceCertificateNumber: '',
                         practiceQualificationCertificateNumber: '',
                         practiceAddress: '',
-                        practiceDepartmentId: null,
+                        practiceDepartmentId: '',
                         practicePersonnelCountryCode: '',
                         practiceTitle: '',
                         practicePersonBeginTime: null,
@@ -469,7 +525,7 @@
                     data: JSON.stringify(this.staffInfoResponse),
                     contentType: 'application/json',
                     success: function () {
-                        that.getStaffList('');
+                        that.getStaffList('',false);
                         layer.msg('保存成功');
                     },
                     error: function () {
@@ -484,7 +540,7 @@
                     url: '/manage/deleteStaff?eid='+eid+'&aid='+aid+'&pid='+pid,
                     type: 'GET',
                     success: function () {
-                        that.getStaffList('');
+                        that.getStaffList('',true);
                         layer.msg('删除成功');
                     },
                     error: function (error) {
@@ -497,8 +553,22 @@
 
         },
         mounted(){
-            this.getStaffList('');
+            this.getStaffList('',true);
             let that = this;
+            $.ajax({
+                url: '/manage/getDepartmentList?name=',
+                type: 'GET',
+                success: function (response) {
+                    // 先清空
+                    that.departmentList.splice(0,that.departmentList.length);
+                    response.forEach(item=>{
+                        that.departmentList.push(item);
+                    });
+                },
+                error: function () {
+                    layer.msg('获取科室列表失败，请刷新重试');
+                }
+            });
             layui.use('laydate', function(){
                 var laydate = layui.laydate;
 
