--- a/zft-adapter/src/main/resources/static/css/zft.css
+++ b/zft-adapter/src/main/resources/static/css/zft.css
@@ -4,6 +4,11 @@ body{
     width: 100%;
 }
 
+select {
+    overflow-y: auto;
+    max-height: 2em;
+}
+
 .header{
     width: 100%;
     height: 70px;
